# super-trading

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  Makefile  README.md  docker-compose.yml
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
backend/: package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/bots/: bots.controller.ts  bots.module.ts  bots.service.ts
backend/src/candles/: candles.controller.ts  candles.module.ts  (+1 more)
bots/: main.py  pyproject.toml
bots/config/: accounts.json
bots/config/bots/: gold_momentum_v1.json  gold_sentiment_v1.json  gold_sma_m5_v1.json  gold_sma_v1.json
bots/ml/train/: build_features.py  evaluate.py  export_candles.py  fetch_data.py  train_model.py
bots/scripts/: bot_diagnose.py  smoke_trade.py  test_oanda.py
bots/shared/: __init__.py  balance_tracker.py  bot_registry.py  bot_sync.py  calendar_monitor.py  candle_backfill.py  config.py  db.py  decision_logger.py  model_registry.py  news_fetcher.py  notifier.py  oanda_client.py  oanda_streamer.py  price_poller.py  redis_client.py  sentiment_engine.py  trade_console.py  trading_db.py
bots/strategies/: __init__.py  base_bot.py  gold_momentum_v1.py  gold_sentiment_v1.py  gold_sma_m5_v1.py  gold_sma_v1.py  sma_cross_bot.py
docker/postgres/: init.sql
docs/: README.md  project-status.md  trading-bot-system-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: run-dashboard.sh  run-trading.sh  setup.sh  start-all.sh
scripts/lib/: wait-infra.sh
(+34 files in other folders)
